# YTVidDownloaderWeb

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  sample.env
YTVidDownloaderWeb/: asgi.py  settings.py  urls.py  wsgi.py
home/: urls.py  views.py
home/static/home/css/: style.css
home/static/home/js/: script.js
home/templates/home/: home.html  home_layout.html
utils/: constants.py  helper.py
