[tool.poetry]
name = "happy_protein"
version = "0.1.0"
description = "YTVidDownloaderWeb"
authors = ["Rangarajan"]

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
Brotli = "1.1.0"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
Django = "4.2"
gunicorn = "21.2.0"
idna = "3.6"
mutagen = "1.47.0"
packaging = "23.2"
pycryptodomex = "3.19.1"
python-dotenv = "1.0.1"
requests = "2.31.0"
sqlparse = "0.4.4"
tzdata = "2023.4"
urllib3 = "2.1.0"
websockets = "12.0"
whitenoise = "6.6.0"
yt-dlp = "2023.11.16"